--- a/app/src/main/res/layout/fragment_mm_top.xml
+++ b/app/src/main/res/layout/fragment_mm_top.xml
@@ -16,7 +16,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/CardsInDeck"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -24,7 +24,7 @@
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/CardNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -42,21 +42,21 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/Save"
+                android:id="@+id/SaveButt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/Save" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/LoadBut"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/Load" />
 
             <Button
-                android:id="@+id/Reset"
+                android:id="@+id/ResetButt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
