Current classes added

--- a/app/src/main/res/layout/fragment_mm_top.xml
+++ b/app/src/main/res/layout/fragment_mm_top.xml
@@ -16,25 +16,19 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/CardsInDeck"
+                android:id="@+id/ClassText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/deckNumText"
-                android:textSize="24sp" />
+                android:text="@string/SelectClass" />
 
-            <TextView
-                android:id="@+id/CardNumber"
+            <Spinner
+                android:id="@+id/ClassSelect"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/Zero"
-                android:textSize="24sp" />
+                android:entries="@array/class_select"
+                android:spinnerMode="dropdown" />
         </LinearLayout>
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
